[package]
name = "gen-emoji"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
heck = "0.3.2"
indexmap = "1.6.1"
itertools = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"