[package]
name = "gateway"
version = "0.1.0"
authors = ["Novapone <fpnova@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/gateway.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", default-features = false }
js-sys = "0.3"
wee_alloc = "0.4.5"
miniz_oxide = "0.4.4"
serde-wasm-bindgen = "0.1.3"
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
# numtoa = "0.2.3" # use this if necessary

[dependencies.web-sys]
version = "0.3.40"
features = [
    "BinaryType",
    # "Blob",
    "ErrorEvent",
    # "FileReader",
    "MessageEvent",
    # "ProgressEvent",
    "WebSocket",
    "TextDecoder",
    "TextEncoder",
    "DedicatedWorkerGlobalScope"
]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-O4']

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4', '-c']