[package]
name = "gateway"
version = "0.1.0"
authors = ["Novapone <fpnova@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/gateway.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", default-features = false }
js-sys = "0.3"
wee_alloc = "0.4.5"
miniz_oxide = "0.4.4"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-O4']

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4', '-c']